FinFlow - Project (att)

--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FinFlow | Ady Fios</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Ady Fios - Controle Financeiro</title>
+    <link rel="stylesheet" href="style.css"> <!-- Link para o arquivo CSS -->
 </head>
+
 <body>
     <div class="container">
-        <h1>Ady Fios - Financial Control</h1>
-
+        <h1>Ady Fios - Controle Financeiro</h1>
         <form class="formulario-ady-fios" onsubmit="adicionarTransacao(event)">
             <h2>Adicionar Transação</h2>
-            
             <label for="descricao">Descrição:</label>
             <input type="text" id="descricao" placeholder="Descrição da transação" required>
 
@@ -56,7 +56,6 @@
 
         <section class="historico">
             <h2>Histórico de Movimentações</h2>
-            
             <div class="botoes-historico">
                 <button id="limpar-historico">Limpar Histórico</button>
                 <button id="limpar-tudo">Limpar Todo o Histórico</button>
@@ -70,6 +69,7 @@
         </section>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script.js"></script> <!-- Link para o arquivo JavaScript -->
 </body>
+
 </html>
